tests/baselines/reference/subtypingWithConstructSignatures4.errors.txt
subtypingWithConstructSignatures4.ts(55,15): error TS2454: Variable 'r1arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(56,12): error TS2454: Variable 'r1arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(56,19): error TS2454: Variable 'r1arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(57,12): error TS2454: Variable 'r1arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(57,20): error TS2454: Variable 'r1arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(61,15): error TS2454: Variable 'r2arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(62,12): error TS2454: Variable 'r2arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(62,19): error TS2454: Variable 'r2arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(63,12): error TS2454: Variable 'r2arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(63,20): error TS2454: Variable 'r2arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(67,15): error TS2454: Variable 'r3arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(68,12): error TS2454: Variable 'r3arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(68,19): error TS2454: Variable 'r3arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(69,12): error TS2454: Variable 'r3arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(69,20): error TS2454: Variable 'r3arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(73,15): error TS2454: Variable 'r4arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(74,12): error TS2454: Variable 'r4arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(74,19): error TS2454: Variable 'r4arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(75,12): error TS2454: Variable 'r4arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(75,20): error TS2454: Variable 'r4arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(79,15): error TS2454: Variable 'r5arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(80,12): error TS2454: Variable 'r5arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(80,19): error TS2454: Variable 'r5arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(81,12): error TS2454: Variable 'r5arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(81,20): error TS2454: Variable 'r5arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(85,15): error TS2454: Variable 'r6arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(86,12): error TS2454: Variable 'r6arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(86,19): error TS2454: Variable 'r6arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(87,12): error TS2454: Variable 'r6arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(87,20): error TS2454: Variable 'r6arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(91,17): error TS2454: Variable 'r11arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(92,13): error TS2454: Variable 'r11arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(92,21): error TS2454: Variable 'r11arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(93,13): error TS2454: Variable 'r11arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(93,22): error TS2454: Variable 'r11arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(97,17): error TS2454: Variable 'r15arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(98,13): error TS2454: Variable 'r15arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(98,21): error TS2454: Variable 'r15arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(99,13): error TS2454: Variable 'r15arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(99,22): error TS2454: Variable 'r15arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(103,17): error TS2454: Variable 'r16arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(104,13): error TS2454: Variable 'r16arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(104,21): error TS2454: Variable 'r16arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(105,13): error TS2454: Variable 'r16arg2' is used before being assigned.
subtypingWithConstructSignatures4.ts(105,22): error TS2454: Variable 'r16arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(108,17): error TS2454: Variable 'r17arg' is used before being assigned.
subtypingWithConstructSignatures4.ts(111,17): error TS2454: Variable 'r18arg' is used before being assigned.


==== subtypingWithConstructSignatures4.ts (47 errors) ====
    // checking subtype relations for function types as it relates to contextual signature instantiation
    
    class Base { foo: string; }
    class Derived extends Base { bar: string; }
    class Derived2 extends Derived { baz: string; }
    class OtherDerived extends Base { bing: string; }
    
    declare function foo1(a: new <T>(x: T) => T[]);
    declare function foo1(a: any): any;
    
    declare function foo2(a2: new <T>(x: T) => string[]);
    declare function foo2(a: any): any;
    
    declare function foo3(a3: new <T>(x: T) => void);
    declare function foo3(a: any): any;
    
    declare function foo4(a4: new <T, U>(x: T, y: U) => string);
    declare function foo4(a: any): any;
    
    declare function foo5(a5: new <T, U>(x: new (arg: T) => U) => T);
    declare function foo5(a: any): any;
    
    declare function foo6(a6: new <T extends Base>(x: new (arg: T) => Derived) => T);
    declare function foo6(a: any): any;
    
    declare function foo11(a11: new <T>(x: { foo: T }, y: { foo: T; bar: T }) => Base);
    declare function foo11(a: any): any;
    
    declare function foo15(a15: new <T>(x: { a: T; b: T }) => T[]);
    declare function foo15(a: any): any;
    
    declare function foo16(a16: new <T extends Base>(x: { a: T; b: T }) => T[]);
    declare function foo16(a: any): any;
    
    declare function foo17(a17: {
        new <T extends Derived>(x: new (a: T) => T): T[];
        new <T extends Base>(x: new (a: T) => T): T[];        
    });
    declare function foo17(a: any): any;
    
    declare function foo18(a18: {
        new (x: {
            new <T extends Derived>(a: T): T;
            new <T extends Base>(a: T): T;
        }): any[];
        new (x: {
            new <T extends Derived2>(a: T): T;
            new <T extends Base>(a: T): T;
        }): any[];
    });
    declare function foo18(a: any): any;
    
    var r1arg: new <T>(x: T) => T[];
    var r1arg2: new <T>(x: T) => T[];
    var r1 = foo1(r1arg);
                  ~~~~~
!!! error TS2454: Variable 'r1arg' is used before being assigned.
    var r1a = [r1arg, r1arg2];
               ~~~~~
!!! error TS2454: Variable 'r1arg' is used before being assigned.
                      ~~~~~~
!!! error TS2454: Variable 'r1arg2' is used before being assigned.
    var r1b = [r1arg2, r1arg];
               ~~~~~~
!!! error TS2454: Variable 'r1arg2' is used before being assigned.
                       ~~~~~
!!! error TS2454: Variable 'r1arg' is used before being assigned.
    
    var r2arg: new <T>(x: T) => string[];
    var r2arg2: new <T>(x: T) => string[];
    var r2 = foo2(r2arg);
                  ~~~~~
!!! error TS2454: Variable 'r2arg' is used before being assigned.
    var r2a = [r2arg, r2arg2];
               ~~~~~
!!! error TS2454: Variable 'r2arg' is used before being assigned.
                      ~~~~~~
!!! error TS2454: Variable 'r2arg2' is used before being assigned.
    var r2b = [r2arg2, r2arg];
               ~~~~~~
!!! error TS2454: Variable 'r2arg2' is used before being assigned.
                       ~~~~~
!!! error TS2454: Variable 'r2arg' is used before being assigned.
    
    var r3arg: new <T>(x: T) => T;
    var r3arg2: new <T>(x: T) => void;
    var r3 = foo3(r3arg);
                  ~~~~~
!!! error TS2454: Variable 'r3arg' is used before being assigned.
    var r3a = [r3arg, r3arg2];
               ~~~~~
!!! error TS2454: Variable 'r3arg' is used before being assigned.
                      ~~~~~~
!!! error TS2454: Variable 'r3arg2' is used before being assigned.
    var r3b = [r3arg2, r3arg];
               ~~~~~~
!!! error TS2454: Variable 'r3arg2' is used before being assigned.
                       ~~~~~
!!! error TS2454: Variable 'r3arg' is used before being assigned.
    
    var r4arg: new <T, U>(x: T, y: U) => string;
    var r4arg2: new <T, U>(x: T, y: U) => string;
    var r4 = foo4(r4arg);
                  ~~~~~
!!! error TS2454: Variable 'r4arg' is used before being assigned.
    var r4a = [r4arg, r4arg2];
               ~~~~~
!!! error TS2454: Variable 'r4arg' is used before being assigned.
                      ~~~~~~
!!! error TS2454: Variable 'r4arg2' is used before being assigned.
    var r4b = [r4arg2, r4arg];
               ~~~~~~
!!! error TS2454: Variable 'r4arg2' is used before being assigned.
                       ~~~~~
!!! error TS2454: Variable 'r4arg' is used before being assigned.
    
    var r5arg: new <T, U>(x: new (arg: T) => U) => T;
    var r5arg2: new <T, U>(x: new (arg: T) => U) => T;
    var r5 = foo5(r5arg);
                  ~~~~~
!!! error TS2454: Variable 'r5arg' is used before being assigned.
    var r5a = [r5arg, r5arg2];
               ~~~~~
!!! error TS2454: Variable 'r5arg' is used before being assigned.
                      ~~~~~~
!!! error TS2454: Variable 'r5arg2' is used before being assigned.
    var r5b = [r5arg2, r5arg];
               ~~~~~~
!!! error TS2454: Variable 'r5arg2' is used before being assigned.
                       ~~~~~
!!! error TS2454: Variable 'r5arg' is used before being assigned.
    
    var r6arg: new <T extends Base, U extends Derived>(x: new (arg: T) => U) => T;
    var r6arg2: new <T extends Base>(x: new (arg: T) => Derived) => T;
    var r6 = foo6(r6arg);
                  ~~~~~
!!! error TS2454: Variable 'r6arg' is used before being assigned.
    var r6a = [r6arg, r6arg2];
               ~~~~~
!!! error TS2454: Variable 'r6arg' is used before being assigned.
                      ~~~~~~
!!! error TS2454: Variable 'r6arg2' is used before being assigned.
    var r6b = [r6arg2, r6arg];
               ~~~~~~
!!! error TS2454: Variable 'r6arg2' is used before being assigned.
                       ~~~~~
!!! error TS2454: Variable 'r6arg' is used before being assigned.
    
    var r11arg: new <T, U>(x: { foo: T }, y: { foo: U; bar: U }) => Base;
    var r11arg2: new <T>(x: { foo: T }, y: { foo: T; bar: T }) => Base;
    var r11 = foo11(r11arg);
                    ~~~~~~
!!! error TS2454: Variable 'r11arg' is used before being assigned.
    var r11a = [r11arg, r11arg2];
                ~~~~~~
!!! error TS2454: Variable 'r11arg' is used before being assigned.
                        ~~~~~~~
!!! error TS2454: Variable 'r11arg2' is used before being assigned.
    var r11b = [r11arg2, r11arg];
                ~~~~~~~
!!! error TS2454: Variable 'r11arg2' is used before being assigned.
                         ~~~~~~
!!! error TS2454: Variable 'r11arg' is used before being assigned.
    
    var r15arg: new <U, V>(x: { a: U; b: V; }) => U[];
    var r15arg2: new <T>(x: { a: T; b: T }) => T[];
    var r15 = foo15(r15arg);
                    ~~~~~~
!!! error TS2454: Variable 'r15arg' is used before being assigned.
    var r15a = [r15arg, r15arg2];
                ~~~~~~
!!! error TS2454: Variable 'r15arg' is used before being assigned.
                        ~~~~~~~
!!! error TS2454: Variable 'r15arg2' is used before being assigned.
    var r15b = [r15arg2, r15arg];
                ~~~~~~~
!!! error TS2454: Variable 'r15arg2' is used before being assigned.
                         ~~~~~~
!!! error TS2454: Variable 'r15arg' is used before being assigned.
    
    var r16arg: new <T extends Base>(x: { a: T; b: T }) => T[];
    var r16arg2: new <T extends Base>(x: { a: T; b: T }) => T[];
    var r16 = foo16(r16arg);
                    ~~~~~~
!!! error TS2454: Variable 'r16arg' is used before being assigned.
    var r16a = [r16arg, r16arg2];
                ~~~~~~
!!! error TS2454: Variable 'r16arg' is used before being assigned.
                        ~~~~~~~
!!! error TS2454: Variable 'r16arg2' is used before being assigned.
    var r16b = [r16arg2, r16arg];
                ~~~~~~~
!!! error TS2454: Variable 'r16arg2' is used before being assigned.
                         ~~~~~~
!!! error TS2454: Variable 'r16arg' is used before being assigned.
    
    var r17arg: new <T>(x: new (a: T) => T) => T[];
    var r17 = foo17(r17arg);
                    ~~~~~~
!!! error TS2454: Variable 'r17arg' is used before being assigned.
    
    var r18arg: new (x: new <T>(a: T) => T) => any[];
    var r18 = foo18(r18arg);
                    ~~~~~~
!!! error TS2454: Variable 'r18arg' is used before being assigned.